src/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>accept order</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ordering</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>proposal request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMOUNT__c</fullName>
        <label>AMOUNT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APPROVAL_ORDER_STATUD__c</fullName>
        <label>APPROVAL ORDER STATUD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APPROVED</fullName>
                </value>
                <value>
                    <fullName>REJECTED</fullName>
                </value>
                <value>
                    <fullName>SUBMITED</fullName>
                </value>
                <value>
                    <fullName>RECALLED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_DISCOUNT_del__c</fullName>
        <formula>$User.DISCOUNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ORDER DISCOUNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_close__c</fullName>
        <label>Reason for close</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>active_order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This filed will be automated</inlineHelpText>
        <label>active order</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>add_to_cart</fullName>
        <active>false</active>
        <businessProcess>ordering</businessProcess>
        <label>add to cart</label>
    </recordTypes>
    <recordTypes>
        <fullName>cancelling</fullName>
        <active>true</active>
        <businessProcess>ordering</businessProcess>
        <label>cancelling</label>
    </recordTypes>
    <recordTypes>
        <fullName>collecting</fullName>
        <active>true</active>
        <businessProcess>proposal request</businessProcess>
        <label>collecting</label>
    </recordTypes>
    <recordTypes>
        <fullName>payment</fullName>
        <active>true</active>
        <businessProcess>accept order</businessProcess>
        <label>payment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>